<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout android:id="@+id/lyt_uuid"
    	android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:padding="12dp" >
        
	    <TextView android:id="@+id/txt_uuid_lbl"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/uuid" />
	    
	    <TextView android:id="@+id/txt_uuid"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginStart="5dp"
	        android:textSize="12sp" />
    </LinearLayout>
    
    <LinearLayout android:id="@+id/lyt_ip"
    	android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_below="@id/lyt_uuid" >
        
	    <TextView android:id="@+id/txt_ip"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ip" />
	    
	    <EditText android:id="@+id/et_ip"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/ip_hint"
	        android:textSize="12sp" />
	    
    </LinearLayout>
    
    <LinearLayout android:id="@+id/lyt_servicebtns" 
       		android:orientation="horizontal" 
	    	android:layout_centerHorizontal="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
        	android:layout_below="@id/lyt_ip"
        	android:paddingBottom="12dp" >
	    
	    <Button android:id="@+id/btn_startservice"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/startservice" />
	    
	    <Button android:id="@+id/btn_stopservice"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/stopservice" />
	    
    </LinearLayout>
    
    <Button android:id="@+id/btn_ping"
    	android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lyt_servicebtns"
        android:text="@string/ping"/>
    
    <LinearLayout
        android:id="@+id/lyt_usbcontrols"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_ping"
        android:layout_marginTop="6dp"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:id="@+id/usb_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/usbDeviceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usb_label" />
            
            <TextView
	            android:id="@+id/usbDeviceText"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/no_usb_device" 
	            android:layout_marginLeft="5dp"
                android:textSize="12sp" />
            
        </LinearLayout>

        <ScrollView
	        android:id="@+id/outputScroller"
	        android:layout_width="match_parent"
	        android:layout_height="140dp"
	        android:padding="10dp" >
	
	        <TextView
	            android:id="@+id/outputText"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/usb_output_title"
	            android:textColor="#5500FF"
	            android:typeface="monospace" />

	    </ScrollView>
        
        <CheckBox
            android:id="@+id/checkBoxAutoScrollOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/autoscroll" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp" >

            <EditText
                android:id="@+id/sendText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/sendText_hint"
                android:lines="1"
                android:maxLines="1" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_send" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
